Add ThreeJS support

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
-<router-outlet></router-outlet>
+<ngx-spinner></ngx-spinner>
+<div class="ui-wrapper">
+  <app-navbar></app-navbar>
+</div>
+<router-outlet>
+</router-outlet>
