--- a/src/app/battery-level/battery-level.component.html
+++ b/src/app/battery-level/battery-level.component.html
@@ -1,3 +1,5 @@
 <a href="#" (click)="$event.preventDefault(); getBatteryLevel()">Characteristic reading ({{batteryLevel || 'N/A'}})</a>
 
+<app-chart></app-chart>
+
 <a href="#" (click)="$event.preventDefault(); download()">Download ({{counter || 'N/A'}}) log entries</a>
