--- a/src/app/battery-level/battery-level.component.html
+++ b/src/app/battery-level/battery-level.component.html
@@ -1,5 +1,10 @@
 <a href="#" (click)="$event.preventDefault(); getBatteryLevel()">Characteristic reading ({{batteryLevel || 'N/A'}})</a>
 
-<app-chart></app-chart>
+<div style="display: block;">
+  <canvas baseChart width="100%" height="20" [datasets]="lineChartData" [options]="lineChartOptions"
+    [colors]="lineChartColors" [legend]="lineChartLegend" [chartType]="lineChartType" [labels]="lineChartLabels"
+    [plugins]="lineChartPlugins">
+  </canvas>
+</div>
 
-<a href="#" (click)="$event.preventDefault(); download()">Download ({{counter || 'N/A'}}) log entries</a>
+<a href="#" (click)="$event.preventDefault(); updateGraph()">Download ({{counter || 'N/A'}}) log entries</a>
