--- a/src/app/battery-level/battery-level.component.html
+++ b/src/app/battery-level/battery-level.component.html
@@ -1,4 +1,4 @@
-<a href="#" (click)="$event.preventDefault(); getBatteryLevel()">Characteristic reading ({{batteryLevel || 'N/A'}})</a>
+<a href="#" (click)="$event.preventDefault(); getBatteryLevel()">Reading ({{batteryLevel || 'N/A'}})%</a>
 
 <div style="display: block;">
   <canvas baseChart width="100%" height="20" [datasets]="lineChartData" [options]="lineChartOptions"
@@ -7,4 +7,4 @@
   </canvas>
 </div>
 
-<a href="#" (click)="$event.preventDefault(); updateGraph()">Download ({{counter || 'N/A'}}) log entries</a>
+<a href="#" (click)="$event.preventDefault(); download()">Download ({{counter || 'N/A'}}) log entries</a>
