--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -10,7 +10,7 @@
     <ul class="navbar-nav mr-auto">
       <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
         <a class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show"
-          [routerLink]="['/battery']">Battery</a>
+          [routerLink]="['/graph']">Graph</a>
       </li>
     </ul>
     <ul class="navbar-nav ml-auto">
