--- a/src/app/graph/graph.component.html
+++ b/src/app/graph/graph.component.html
@@ -1,16 +1,16 @@
-<a href="#" (click)="$event.preventDefault(); getBatteryLevel()">Reading ({{lastReading}})%</a>
+<a href="#" (click)="$event.preventDefault(); getSpirometerReadings()">Reading ({{lastReading}})%</a>
 
 <div style="display: block;">
   <canvas
     baseChart
     width="100%"
     height="20"
-    [datasets]="countEventsData"
-    [chartType]="countEventsChartType"
-    [labels]="countEventsLabels"
-    [colors]="countEventsColors"
-    [options]="countEventsOptions"
+    [datasets]="chartData"
+    [chartType]="chartType"
+    [labels]="chartLabels"
+    [colors]="chartColors"
+    [options]="chartOptions"
   ></canvas>
 </div>
 
-<a href="#" (click)="$event.preventDefault(); download()">Download ({{readings || 'N/A'}}) log entries</a>
+<!-- <a href="#" (click)="$event.preventDefault(); download()">Download ({{readings || 'N/A'}}) log entries</a> -->
