--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -8,17 +8,27 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
-        <a class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show"
-          [routerLink]="['/graph']">Graph</a>
+      <li class="nav-item" *ngIf="(spiromagicService.device | async) === null">
+        <a class="nav-link" (click)="spiromagicService.connect()">Connect to device</a>
       </li>
+      <ng-container *ngIf="(spiromagicService.device | async)">
+        <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
+          <a class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show"
+            [routerLink]="['/game']">Game</a>
+        </li>
+        <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
+          <a class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show"
+            [routerLink]="['/graph']">Graph</a>
+        </li>
+      </ng-container>
     </ul>
-    <ul class="navbar-nav ml-auto">
-      <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
-        <a class="nav-link" href="#" [routerLink]="['/account']"><i class="fas fa-user"></i></a>
+    <ul *ngIf="(spiromagicService.device | async) as device" class="navbar-nav ml-auto">
+      <li class="nav-item">
+        <a class="nav-link active">Connected to {{device.name}}
+        </a>
       </li>
-      <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
-        <a class="nav-link" href="#"><i class="fas fa-sign-out-alt"></i></a>
+      <li class="nav-item">
+        <a class="nav-link" (click)="spiromagicService.disconnect()">Disconnect</a>
       </li>
     </ul>
   </div>
