--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,11 +1,2 @@
-<div class="toolbar">
-  <div class="btn-group-vertical">
-    <button class="btn btn-success" data-toggle="modal" data-target="#screenshotModal" (click)="takeScreenshot()"
-      title="test">
-      <i class="fas fa-camera"></i>
-    </button>
-  </div>
-</div>
-<div class="engine-wrapper">
-  <canvas #rendererCanvas id="renderCanvas"></canvas>
-</div>
+Welcome screen
+
