--- a/src/app/graph/graph.component.html
+++ b/src/app/graph/graph.component.html
@@ -1,4 +1,4 @@
-<a href="#" (click)="$event.preventDefault(); getSpirometerReadings()">Reading ({{lastReading}})%</a>
+<a href="#" (click)="$event.preventDefault(); spiromagicService.connect()">Reading ({{lastReading}})%</a>
 
 <div style="display: block;">
   <canvas
@@ -8,7 +8,6 @@
     [datasets]="chartData"
     [chartType]="chartType"
     [labels]="chartLabels"
-    [colors]="chartColors"
     [options]="chartOptions"
   ></canvas>
 </div>
