--- a/src/app/graph/graph.component.html
+++ b/src/app/graph/graph.component.html
@@ -1,18 +1,22 @@
-<a href="#" (click)="$event.preventDefault(); spiromagicService.connect()">Reading ({{lastReading}})%</a>
-
-<p>Smallest reading: {{smallestReading || 'N/A'}}</p>
-<p>Biggest reading: {{biggestReading || 'N/A'}}</p>
-
-<div style="display: block;">
-  <canvas
-    baseChart
-    width="100%"
-    height="20"
-    [datasets]="chartData"
-    [chartType]="chartType"
-    [labels]="chartLabels"
-    [options]="chartOptions"
-  ></canvas>
+<div class="container-fluid">
+  <div class="row row-cols-1">
+    <div class="col mb-4 mt-4">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">Spirometer Stats</h5>
+          <p>Current reading: {{lastReading || 'N/A'}}</p>
+          <p>Smallest reading: {{smallestReading || 'N/A'}}</p>
+          <p>Biggest reading: {{biggestReading || 'N/A'}}</p>
+        </div>
+      </div>
+    </div>
+    <div class="col mb-4">
+      <div class="card">
+        <div class="card-body">
+          <canvas baseChart width="100%" height="20" [datasets]="chartData" [chartType]="chartType" [labels]="chartLabels"
+            [options]="chartOptions"></canvas>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
-
-<!-- <a href="#" (click)="$event.preventDefault(); download()">Download ({{readings || 'N/A'}}) log entries</a> -->
