--- a/src/app/graph/graph.component.html
+++ b/src/app/graph/graph.component.html
@@ -13,7 +13,8 @@
     <div class="col mb-4">
       <div class="card">
         <div class="card-body">
-          <canvas baseChart width="100%" height="20" [datasets]="chartData" [chartType]="chartType" [labels]="chartLabels"
+          <!-- TODO: Height needs to be dynamic and support mobile devices -->
+          <canvas baseChart width="100%" height="100" [datasets]="chartData" [chartType]="chartType" [labels]="chartLabels"
             [options]="chartOptions"></canvas>
         </div>
       </div>
