--- a/src/app/graph/graph.component.html
+++ b/src/app/graph/graph.component.html
@@ -7,6 +7,12 @@
           <p>Current reading: {{lastReading || 'N/A'}}</p>
           <p>Smallest reading: {{smallestReading || 'N/A'}}</p>
           <p>Biggest reading: {{biggestReading || 'N/A'}}</p>
+          <p>Normalization strategy:</p>
+          <button type="button" class="btn btn-primary btn-strategy" *ngFor="let option of normalizationOptions"
+            [ngClass]="{'active': selectedNormalizationStrategy === option.strategy}"
+            (click)="changeNormalizationStrategy(option.strategy)">
+            {{option.name}}
+          </button>
         </div>
       </div>
     </div>
@@ -14,8 +20,8 @@
       <div class="card">
         <div class="card-body">
           <!-- TODO: Height needs to be dynamic and support mobile devices -->
-          <canvas baseChart width="100%" height="20" [datasets]="chartData" [chartType]="chartType" [labels]="chartLabels"
-            [options]="chartOptions"></canvas>
+          <canvas baseChart width="100%" height="20" [datasets]="chartData" [chartType]="chartType"
+            [labels]="chartLabels" [options]="chartOptions"></canvas>
         </div>
       </div>
     </div>
