Calibration is more configurable now

--- a/src/app/graph/graph.component.html
+++ b/src/app/graph/graph.component.html
@@ -8,10 +8,10 @@
           <p>Smallest reading: {{minReading || 'N/A'}}</p>
           <p>Biggest reading: {{maxReading || 'N/A'}}</p>
           <p>Calibration:</p>
-          <button type="button" class="btn btn-primary btn-calibration" *ngFor="let option of calibrationOptions"
-            [ngClass]="{'active': activeCalibration === option.calibration}"
-            (click)="changeCalibration(option.calibration)">
-            {{option.name}}
+          <button type="button" class="btn btn-primary btn-calibration" *ngFor="let calibration of calibrations"
+            [ngClass]="{'active': activeCalibration === calibration}"
+            (click)="changeCalibration(calibration)">
+            {{calibration.name}}
           </button>
           <p class="text-muted mt-2"><small >{{calibrationDescription}}</small></p>
         </div>
