--- a/src/app/graph/graph.component.scss
+++ b/src/app/graph/graph.component.scss
@@ -1,3 +1,13 @@
 .btn-calibration {
   margin-right: 5px;
 }
+
+.graph {
+  height: 40vh;
+}
+
+@media (max-width: 600px) {
+  .graph {
+    height: 35vh;
+  }
+}
