--- a/src/app/graph/graph.component.html
+++ b/src/app/graph/graph.component.html
@@ -9,11 +9,10 @@
           <p>Biggest reading: {{maxReading || 'N/A'}}</p>
           <p>Calibration:</p>
           <button type="button" class="btn btn-primary btn-calibration" *ngFor="let calibration of calibrations"
-            [ngClass]="{'active': activeCalibration === calibration}"
-            (click)="changeCalibration(calibration)">
+            [ngClass]="{'active': activeCalibration === calibration}" (click)="changeCalibration(calibration)">
             {{calibration.name}}
           </button>
-          <p class="text-muted mt-2"><small >{{calibrationDescription}}</small></p>
+          <p class="text-muted mt-2"><small>{{calibrationDescription}}</small></p>
         </div>
       </div>
     </div>
@@ -21,8 +20,10 @@
       <div class="card">
         <div class="card-body">
           <!-- TODO: Height needs to be dynamic and support mobile devices -->
-          <canvas baseChart width="100%" height="20" [datasets]="chartData" [chartType]="chartType"
-            [labels]="chartLabels" [options]="chartOptions"></canvas>
+          <div class="graph">
+            <canvas baseChart [datasets]="chartData" [chartType]="chartType" [labels]="chartLabels"
+              [options]="chartOptions"></canvas>
+          </div>
         </div>
       </div>
     </div>
