On disconnect as well

--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -29,7 +29,8 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" (click)="spiromagicService.disconnect()">Disconnect</a>
+        <a class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show"
+          (click)="spiromagicService.disconnect()">Disconnect</a>
       </li>
     </ul>
   </div>
