--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -19,7 +19,7 @@
         </li>
         <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
           <a class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show"
-            [routerLink]="['/graph']">Graph</a>
+            [routerLink]="['/calibration']">Calibration</a>
         </li>
       </ng-container>
     </ul>
