--- a/src/app/calibration/calibration.component.html
+++ b/src/app/calibration/calibration.component.html
@@ -1,19 +1,32 @@
 <div class="container-fluid">
-  <div class="row row-cols-1">
+  <div class="row row-cols-1 row justify-content-start">
     <div class="col mb-4 mt-4">
       <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Spirometer Stats</h5>
+        <div class="card-body col-4">
+          <h5 class="card-title">Spirometer Calibration</h5>
+          <p class="font-weight-bold">Readings:</p>
           <p>Current reading: {{lastReading || 'N/A'}}</p>
           <p>Smallest reading: {{minReading || 'N/A'}}</p>
           <p>Biggest reading: {{maxReading || 'N/A'}}</p>
-          <p>Calibration:</p>
-          <button type="button" class="btn btn-primary btn-calibration" *ngFor="let calibration of calibrations"
-            [ngClass]="{'active': activeCalibration.calibrationType === calibration.calibrationType}"
-            (click)="changeCalibration(calibration)">
-            {{calibration.name}}
-          </button>
-          <p class="text-muted mt-2"><small>{{activeCalibration.description}}</small></p>
+          <p class="font-weight-bold">Calibration:</p>
+          <div class="form-group">
+            <label for="sensitivityRange">Sensitivity ({{sensitivity}}%)</label>
+            <input type="range" #sensitivityControl class="form-control" min="0" max="100" step="1" [value]="sensitivity"
+              (input)="changeSensitivity(+sensitivityControl.value)" id="sensitivityRange">
+            <small class="form-text text-muted">How sensitive should the readings be.</small>
+          </div>
+          <div class="form-group">
+            <label for="calibrationMode">Calibration mode</label>
+            <div>
+              <button id="calibrationMode" type="button" class="btn btn-primary btn-calibration"
+                *ngFor="let calibration of calibrations"
+                [ngClass]="{'active': activeCalibration.calibrationType === calibration.calibrationType}"
+                (click)="changeCalibration(calibration)">
+                {{calibration.name}}
+              </button>
+            </div>
+            <small class="form-text text-muted">{{activeCalibration.description}}</small>
+          </div>
         </div>
       </div>
     </div>
