--- a/src/app/calibration/calibration.component.html
+++ b/src/app/calibration/calibration.component.html
@@ -1,35 +1,43 @@
 <div class="container-fluid">
-  <div class="row row-cols-1 row justify-content-start">
-    <div class="col mb-4 mt-4">
+  <div class="row mb-4 mt-4">
+    <div class="col">
       <div class="card">
-        <div class="card-body col-4">
-          <h5 class="card-title">Spirometer Calibration</h5>
-          <p class="font-weight-bold">Readings:</p>
-          <p>Current reading: {{lastReading || 'N/A'}}</p>
-          <p>Smallest reading: {{minReading || 'N/A'}}</p>
-          <p>Biggest reading: {{maxReading || 'N/A'}}</p>
-          <p class="font-weight-bold">Calibration:</p>
-          <div class="form-group">
-            <label for="sensitivityRange">Sensitivity ({{sensitivity}}%)</label>
-            <input type="range" #sensitivityControl class="form-control" min="0" max="100" step="1" [value]="sensitivity"
-              (input)="changeSensitivity(+sensitivityControl.value)" id="sensitivityRange">
-            <small class="form-text text-muted">How sensitive should the readings be.</small>
-          </div>
-          <div class="form-group">
-            <label for="calibrationMode">Calibration mode</label>
-            <div>
-              <button id="calibrationMode" type="button" class="btn btn-primary btn-calibration"
-                *ngFor="let calibration of calibrations"
-                [ngClass]="{'active': activeCalibration.calibrationType === calibration.calibrationType}"
-                (click)="changeCalibration(calibration)">
-                {{calibration.name}}
-              </button>
+        <div class="card-body">
+          <!-- <h5 class="card-title">Spirometer Calibration</h5> -->
+          <div class="row justify-content-between">
+            <div class="col-4">
+              <p class="font-weight-bold">Calibration</p>
+              <div class="form-group">
+                <label for="sensitivityRange">Sensitivity ({{sensitivity}}%)</label>
+                <input type="range" #sensitivityControl class="form-control" min="0" max="100" step="1"
+                  [value]="sensitivity" (input)="changeSensitivity(+sensitivityControl.value)" id="sensitivityRange">
+                <small class="form-text text-muted">How sensitive should the readings be.</small>
+              </div>
+              <div class="form-group">
+                <label for="calibrationMode">Mode</label>
+                <div>
+                  <button id="calibrationMode" type="button" class="btn btn-primary btn-calibration"
+                    *ngFor="let calibration of calibrations"
+                    [ngClass]="{'active': activeCalibration.calibrationType === calibration.calibrationType}"
+                    (click)="changeCalibration(calibration)">
+                    {{calibration.name}}
+                  </button>
+                </div>
+                <small class="form-text text-muted">{{activeCalibration.description}}</small>
+              </div>
             </div>
-            <small class="form-text text-muted">{{activeCalibration.description}}</small>
+            <div class="col-4">
+              <p class="font-weight-bold">Readings</p>
+              <p>Current reading: {{lastReading || 'N/A'}}</p>
+              <p>Min reading: {{minReading || 'N/A'}}</p>
+              <p>Max reading: {{maxReading || 'N/A'}}</p>
+            </div>
           </div>
         </div>
       </div>
     </div>
+  </div>
+  <div class="row">
     <div class="col mb-4">
       <div class="card">
         <div class="card-body">
