Rewrite calibrations to use strategy pattern

--- a/src/app/calibration/calibration.component.html
+++ b/src/app/calibration/calibration.component.html
@@ -12,7 +12,7 @@
                 <div>
                   <button id="calibrationMode" type="button" class="btn btn-primary btn-calibration"
                     *ngFor="let calibration of calibrations"
-                    [ngClass]="{'active': activeCalibration.calibrationType === calibration.calibrationType}"
+                    [ngClass]="{'active': activeCalibration.name === calibration.name}"
                     (click)="changeCalibration(calibration)">
                     {{calibration.name}}
                   </button>
