--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,9 +1,13 @@
 <div class="toolbar">
   <div class="btn-group-vertical">
     <button class="btn btn-success" data-toggle="modal" data-target="#screenshotModal" (click)="takeScreenshot()"
-    title="Take screenshot">
-    <i class="fas fa-camera"></i>
-  </button>
+      title="Take screenshot">
+      <i class="fas fa-camera"></i>
+    </button>
+    <button class="btn btn-danger" (click)="resetGame()"
+      title="Reset game">
+      <i class="fas fa-redo"></i>
+    </button>
   </div>
 </div>
 
