--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -7,28 +7,21 @@
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item" *ngIf="(spiromagicService.device | async) === null">
+    <ul class="navbar-nav mr-auto" *ngIf="spiromagicService.isConnected">
+      <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
+        <a class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show" [routerLink]="['/game']">Game</a>
+      </li>
+      <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
+        <a class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show"
+          [routerLink]="['/calibration']">Calibration</a>
+      </li>
+    </ul>
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item" *ngIf="!spiromagicService.isConnected">
         <a class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show"
           (click)="spiromagicService.connect()">Connect to device</a>
       </li>
-      <ng-container *ngIf="(spiromagicService.device | async)">
-        <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
-          <a class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show"
-            [routerLink]="['/game']">Game</a>
-        </li>
-        <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
-          <a class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show"
-            [routerLink]="['/calibration']">Calibration</a>
-        </li>
-      </ng-container>
-    </ul>
-    <ul *ngIf="(spiromagicService.device | async) as device" class="navbar-nav ml-auto">
-      <li class="nav-item">
-        <a class="nav-link active">Connected to {{device.name}}
-        </a>
-      </li>
-      <li class="nav-item">
+      <li class="nav-item" *ngIf="spiromagicService.isConnected">
         <a class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show"
           (click)="spiromagicService.disconnect()">Disconnect</a>
       </li>
