--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -26,6 +26,10 @@
             data-toggle="collapse" data-target=".navbar-collapse.show" [routerLink]="['/game/flying']">
             Flying Game
           </a>
+          <a class="dropdown-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}"
+            data-toggle="collapse" data-target=".navbar-collapse.show" [routerLink]="['/game/balloon']">
+            Balloon Game
+          </a>
         </div>
       </li>
       <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
