Show how many coins a player collected

--- a/src/app/games/kiwi-game/kiwi-game.component.scss
+++ b/src/app/games/kiwi-game/kiwi-game.component.scss
@@ -1,8 +1,15 @@
+.scoreboard {
+  z-index: 99;
+  position: absolute;
+  top: 10% ;
+  right: 50%;
+}
+
 .toolbar {
   z-index: 99;
   position: absolute;
-  top: 4vw;
-  right: 5vh;
+  top: 10%;
+  right: 1%;
 }
 
 .engine-wrapper {
