--- a/src/app/games/kiwi-game/kiwi-game.component.html
+++ b/src/app/games/kiwi-game/kiwi-game.component.html
@@ -1,12 +1,12 @@
+<div class="scoreboard">
+  <p>{{coinsCollected}}</p>
+</div>
+
 <div class="toolbar">
   <div class="btn-group-vertical">
-    <!-- <button class="btn btn-success" data-toggle="modal" data-target="#screenshotModal" (click)="takeScreenshot()"
-      title="Take screenshot">
-      <i class="fas fa-camera"></i>
-    </button>
     <button class="btn btn-danger" (click)="resetGame()" title="Reset game">
       <i class="fas fa-redo"></i>
-    </button> -->
+    </button>
   </div>
 </div>
 
