--- a/src/app/calibration/calibration.component.html
+++ b/src/app/calibration/calibration.component.html
@@ -34,6 +34,9 @@
               <button type="button" class="btn btn-primary" (click)="resetReadings()">
                 Reset readings
               </button>
+              <button type="button" class="btn btn-primary ml-2" (click)="resetCalibration()">
+                Reset calibration
+              </button>
             </div>
           </div>
         </div>
