--- a/src/app/games/kiwi-game/kiwi-game.component.html
+++ b/src/app/games/kiwi-game/kiwi-game.component.html
@@ -3,10 +3,10 @@
 </div>
 
 <div class="toolbar">
-  <div class="btn-group-vertical">
-    <button class="btn btn-danger" (click)="resetGame()" title="Reset game">
-      <i class="fas fa-redo"></i>
-    </button>
+  <div class="list-group">
+    <a class="list-group-item list-group-item-action list-group-item-warning">
+      <i class="fas fa-coins mr-2"></i> {{coinsCollected}}
+    </a>
   </div>
 </div>
 
