--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -39,6 +39,10 @@
       </li>
       <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
         <a class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show"
+          [routerLink]="['/game/tutorial']">Tutorial</a>
+      </li>
+      <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
+        <a class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show"
           [routerLink]="['/calibration']">Calibration</a>
       </li>
     </ul>
