--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -25,8 +25,8 @@ app-game {
 
 body {
   // overflow-y: hidden;
-  background-color: #ffff;
-  color: black;
+  background-color: #323f4f;
+  color: #fff;
 }
 
 .engine-wrapper {
