--- a/src/app/pages/connect/connect.component.html
+++ b/src/app/pages/connect/connect.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container text-center d-flex align-items-center justify-content-center">
   <div *ngIf="!spiromagicService.isConnected">
     <div class="row">
       <div class="col">
