--- a/src/app/pages/simple-calibration/simple-calibration.component.html
+++ b/src/app/pages/simple-calibration/simple-calibration.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container text-center d-flex align-items-center justify-content-center">
   <div *ngIf="!exhalationCompleted && !inhalationCompleted">
     <div class="row">
       <div class="col">
