Kiwi Game -> Coin Collector Game

--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -15,16 +15,8 @@
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarGamesDropdown">
           <a class="dropdown-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}"
-            data-toggle="collapse" data-target=".navbar-collapse.show" [routerLink]="['/game/kiwi']">
-            Kiwi Game
-          </a>
-          <a class="dropdown-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}"
-            data-toggle="collapse" data-target=".navbar-collapse.show" [routerLink]="['/game/circle']">
-            Circle Game
-          </a>
-          <a class="dropdown-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}"
-            data-toggle="collapse" data-target=".navbar-collapse.show" [routerLink]="['/game/flying']">
-            Flying Game
+            data-toggle="collapse" data-target=".navbar-collapse.show" [routerLink]="['/game/coin-collector']">
+            Coin Collector Game
           </a>
           <a class="dropdown-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}"
             data-toggle="collapse" data-target=".navbar-collapse.show" [routerLink]="['/game/balloon']">
