--- a/src/app/pages/menu/menu.component.html
+++ b/src/app/pages/menu/menu.component.html
@@ -1,1 +1,28 @@
-<p>menu works!</p>
+<div class="container text-center d-flex align-items-center justify-content-center">
+  <div class="row menu-buttons">
+    <div class="col-3">
+      <button class="btn btn-primary">
+        <i class="fa fa-adjust"></i>
+      </button>
+      <p>Tutorial</p>
+    </div>
+    <div class="col-3">
+      <button class="btn btn-primary">
+        <i class="fa fa-gamepad"></i>
+      </button>
+      <p>Coin Collector game</p>
+    </div>
+    <div class="col-3">
+      <button class="btn btn-primary">
+        <i class="fa fa-gamepad"></i>
+      </button>
+      <p>Balloon game</p>
+    </div>
+    <div class="col-3">
+      <button class="btn btn-primary">
+        <i class="fa fa-cog"></i>
+      </button>
+      <p>Settings</p>
+    </div>
+  </div>
+</div>
