--- a/src/app/pages/tutorial/tutorial.component.html
+++ b/src/app/pages/tutorial/tutorial.component.html
@@ -43,7 +43,7 @@
     </div>
     <div class="row">
       <div class="col">
-        <button type="button" class="btn btn-primary" (click)="spiromagicService.markTutorialAsCompleted()">
+        <button type="button" class="btn btn-primary" (click)="spiromagicService.setTutorialCompleted(true)">
           Continue
         </button>
       </div>
