Nav bar is now called developer mode

--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav *ngIf="!isProduction" class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" data-toggle="collapse" data-target=".navbar-collapse.show" [routerLink]="['/']">
-    Biofeedback Game
+    Developer Mode
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
     aria-expanded="false" aria-label="Toggle navigation">
