Fix advanced calibration styling

--- a/src/app/calibration/calibration.component.scss
+++ b/src/app/calibration/calibration.component.scss
@@ -1,12 +1,6 @@
 .container-fluid {
   .card {
-    background-color: #323f4f;
-    color: #fff;
-    border: 1px solid rgba(255, 255, 255, 0.25);
-
-    .text-muted {
-      color: #ced3d6 !important;
-    }
+    color: black;
   }
 
   .btn-calibration {
