--- a/src/app/pages/tutorial/tutorial.component.html
+++ b/src/app/pages/tutorial/tutorial.component.html
@@ -2,6 +2,9 @@
   <canvas #rendererCanvas id="renderCanvas"></canvas>
 </div>
 <div class="container text-center d-flex align-items-center justify-content-center" *ngIf="!tutorialStarted">
+  <div class="back-button" [routerLink]="['/calibration']">
+    <i class="fa fa-arrow-left text-primary"></i>
+  </div>
   <div>
     <div class="row">
       <div class="col">
@@ -29,6 +32,10 @@
   </div>
 </div>
 <div class="container text-center mt-4" *ngIf="tutorialStarted  && !(spiromagicService.tutorialFinished$ | async)">
+  <!-- TODO: This needs to properly hide the canvas as well -->
+  <div class="back-button" (click)="tutorialStarted = false">
+    <i class="fa fa-arrow-left text-primary"></i>
+  </div>
   <div class="row">
     <div class="col">
       <p>
