--- a/src/app/games/balloon-game/balloon-game.component.html
+++ b/src/app/games/balloon-game/balloon-game.component.html
@@ -1,3 +1,7 @@
+<div class="back-button" [routerLink]="['/menu']">
+  <i class="fa fa-arrow-left text-primary"></i>
+</div>
+
 <div class="engine-wrapper">
   <canvas #rendererCanvas id="renderCanvas"></canvas>
 </div>
