--- a/src/app/games/coin-collector-game/coin-collector-game.component.html
+++ b/src/app/games/coin-collector-game/coin-collector-game.component.html
@@ -1,3 +1,7 @@
+<div class="back-button" [routerLink]="['/menu']">
+  <i class="fa fa-arrow-left"></i>
+</div>
+
 <div class="toolbar">
   <div class="list-group">
     <a class="list-group-item list-group-item-action list-group-item-warning">
