--- a/src/app/pages/settings/settings.component.html
+++ b/src/app/pages/settings/settings.component.html
@@ -1,3 +1,6 @@
+<div class="back-button" [routerLink]="['/menu']">
+  <i class="fa fa-arrow-left text-primary"></i>
+</div>
 <div class="container mt-5">
   <div class="row text-center d-flex align-items-center justify-content-center mb-4">
     <div class="col col-md-6">
