--- a/src/app/pages/tutorial/tutorial.component.html
+++ b/src/app/pages/tutorial/tutorial.component.html
@@ -24,7 +24,7 @@
     </div>
     <div class="row">
       <div class="col">
-        <button type="button" class="btn btn-primary" (click)="start()">
+        <button type="button" class="btn btn-primary" (click)="tutorialStarted = true">
           Continue
         </button>
       </div>
