--- a/src/app/pages/settings/settings.component.html
+++ b/src/app/pages/settings/settings.component.html
@@ -15,7 +15,7 @@
         <button type="button" class="btn btn-primary" (click)="resetReadings()">
           Reset readings
         </button>
-        <button type="button" class="btn btn-primary ml-2" (click)="resetCalibration()" [routerLink]="['/calibration']">
+        <button type="button" class="btn btn-primary ml-2" (click)="resetCalibration()">
           Reset calibration
         </button>
       </div>
